implement cart module, order status enum, delivery address reference, BaseEntity auditing, and MapStruct DTO mapping